<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/wifiCardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TIPO DE CONEXION:"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>

                <TextView
                    android:id="@+id/txtSsid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SSID / Compañia: "
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>

                <TextView
                    android:id="@+id/txtConexion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/blueCardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBluetooth"
                android:gravity="center"
                android:textSize="16dp"
                android:padding="20dp"/>

            <Switch
                android:id="@+id/sBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nfcCardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/txtNFC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="20dp"
                android:text="@string/txtNFC"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gpsCardView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLocalizacion"
                    android:textSize="16dp"
                    android:padding="20dp"/>


                <Switch
                    android:id="@+id/sGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLat"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>


                <TextView
                    android:id="@+id/txtLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indefinido"
                    android:gravity="right"
                    android:textColor="@color/cardview_shadow_start_color"
                    android:textSize="16dp"
                    android:padding="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLong"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:padding="20dp"/>


                <TextView
                    android:id="@+id/txtLong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indefinido"
                    android:textColor="@color/cardview_shadow_start_color"
                    android:gravity="right"
                    android:textSize="16dp"
                    android:padding="20dp"/>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/bAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/botonAct"/>
    <Button
        android:id="@+id/bCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonCamara"/>

</LinearLayout>
</ScrollView>